0022899: Thread-safety in Standard_GUID